# Hermes

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEMO_SCRIPT.md  Makefile  PRD.md  PROJECT_SUMMARY.md  README.md  TDD.md  claude.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  agents.py  config.py  data_loader.py  exporters.py  live_agents.py  main.py  models.py  send_queue.py  workflows.py
data/: sample_accounts.csv
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  mockData.ts  styles.css  types.ts
prompts/: briefing.md  guardrails.md  outreach.md
tests/: test_briefing.py  test_data_loader.py  test_data_loader_pytest.py  test_live_agents.py  test_outreach.py  test_queue_exports.py  test_support.py
